test/functions/jturner/lambda_ref_ret_type.good
lambda_ref_ret_type.chpl:3: error: 'ref' return types are not allowed in lambdas
