test/functions/jturner/lambda_ref_ret_type.chpl
var x = 4;

var get_x = lambda() ref { return x; }

f() = 5;

writeln(x);
